--- a/package.json
+++ b/package.json
@@ -32,6 +32,15 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/editorjs": "^2.19.1",
+    "@editorjs/embed": "^2.4.0",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/link": "^2.3.1",
+    "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/simple-image": "^1.4.0",
+    "@editorjs/underline": "^1.0.0",
     "firebase": "^8.2.1",
     "sirv-cli": "^1.0.0"
   }
