--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "validate": "svelte-check"
+    "validate": "svelte-check",
+    "test": "jest"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
