--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       to enforce using `import type` instead of `import` for Types.
      */
     "importsNotUsedAsValues": "error",
-    "isolatedModules": true,
+    "isolatedModules": false,
     /**
       To have warnings/errors of the Svelte compiler at the correct position,
       enable source maps by default.
