--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "rollup -c -w",
     "start": "sirv public --single",
     "validate": "svelte-check",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src --ext .svelte,.ts"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
@@ -17,7 +18,14 @@
     "@tsconfig/svelte": "^1.0.0",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "carbon-components-svelte": "^0.26.0",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-svelte3": "file:eslint-plugin-svelte3",
+    "eslint-svelte3-preprocess": "0.0.4",
     "jest": "^26.6.3",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
