--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rollup/plugin-typescript": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/svelte": "^3.0.0",
+    "@testing-library/user-event": "^12.6.0",
     "@tsconfig/svelte": "^1.0.0",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
