--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "forceConsistentCasingInFileNames": true
   },
 
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "**/*.test.ts"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
